
-BUG FIX: Fixes for time period (light) price charts reliability, where they would have GAPS between data points, greater then the time intervals set for that particular time period chart

-BUG FIX: Fixes for price charts importing reliability, where they would not properly REBUILD the time period (light) charts

-BUG FIX: Miscellaneous (minor)

-We now SKIP including light charts in chart backup ZIP files, so the backup will be significantly smaller for large chart collections (we automatically rebuild light charts from archival charts if they don't exist, so we don't require backing them up)

-Overhauled upgrade system, that now supports importing config backups (safely)

-More reliable plugin validity checks

-Minor user experience improvements

-------------------------------------------------------------------



-------------------------------------------------------------------
6.01.07

-BUG FIX: Fixed issue on "My Portfolio" page, where average-paid-per-unit of asset was hard-coded to an 8 decimal maximum (causing low value tokens to NOT display gain / loss data)

-BUG FIX: Miscellaneous (minor)

-Added to the "on-chain-stats" plugin: Solana Epoch Information, Solana Node Count history chart, Solana Node GeoLocation map, and Solana Node Version pie chart

-Loosened username restrictions for the "Admin Area => Security => Interface Login" setting (so only validity check is a 4 character MINIMUM)

-Increased amount of currency / crypto maximum decimals allowed (in the "Asset Tracking => Currency Support" Admin Config)

-Tweaks to coingecko API throttling, for a better user experience

-Better AlphaVantage "Stock Overview" API integration / UX

-Buildout of developer-only-maintenance plugin

-Server Edition auto-installer refactoring

-Better Server Edition auto-installer UX

-Minor user experience improvements

-Refactoring

-------------------------------------------------------------------






